tests/compile_fail/bit/bad_bit_cast_size_mismatch.cpp
#include "snap/bit/bit_cast.hpp"
#include <cstdint>

int main() {
    std::uint16_t s = 7;
    auto v = snap::bit_cast<std::uint32_t>(s);
    (void)v;
}
